[package]
name = "mev-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "0.1.2", features = ["full"] }
anyhow = "1.0.86"
dotenv = "0.15.0"
futures = "0.3.30"
log = "0.4.21"
tokio = { version = "1.38.0", features = ["full"] }
