[package]
name = "mev-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "0.1.3", features = ["full"] }
anyhow = "1.0.86"
dotenv = "0.15.0"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
tokio = { version = "1.38.0", features = ["full"] }
alloy-rpc-types = {version = "0.1.3", features = ["trace"]}
alloy-provider = {version = "0.1.3", features = ["trace-api"]}
pool-sync = "0.1.2"
dashmap = "6.0.1"
